# discord-current-price-bot.py

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  entrypoint.sh  forex.py  pyproject.toml  stock.py  ustock.py
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
