[tool.poetry]
name = "discord-current-price-bot.py"
version = "0.1.0"
description = ""
authors = ["LEE Jaeyoung <jaeyoung@monodiary.net>"]

[tool.poetry.dependencies]
python = "3.10.0"
requests = "^2.26.0"
disnake = "^2.2.2"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
